--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,36 +1,295 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Mitr:wght@200;300;400;500;600;700&family=Noto+Serif+Thai:wght@100..900&display=swap');
+/* font-family: "Mitr", sans-serif; */
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-
 :root {
-  --primary: #0ced6a;
-  --light-accent: #68d696;
-  --dark-accent: #08a449;
-  --secondary: #0CEDDB;
+  --primary: #1e3a8a;
+  --light-accent: #2563eb;
+  --dark-accent: #113279;
+  --secondary: #2b2a2a;
   --red: #ff0000;
-  --background: #121212;
+  --background: #AACAEF;
   --light-background: #2b2a2a;
-  --font-color: white;
+  --font-color: black;
   --light-font: #aabbc3;
+
+  --primary-bg-color: #1e3a8a; /* bg-blue-800 */
+  --primary-hover-bg-color: #2563eb; /* hover:bg-blue-600 */
+  --secondary-bg-color: #059669; /* bg-green-600 */
+  --secondary-hover-bg-color: #10b57e; /* hover:bg-green-800 */
+  --alert-bg-color: #90591b; 
+  --alert-hover-bg-color: #ca8a04; 
+  --error-bg-color: #8a1e1e; 
+  --error-hover-bg-color: #eb2525; 
+  --gray-bg-color: #1f2937; 
+  --gray-hover-bg-color: #2b3749; 
+  --button-text-color: #ffffff; /* text-white */
+  --input-bg-color: #ffffff; /* bg-white */
+  --input-border-color: #d1d5db; /* border-gray-300 */
+  --input-text-color: #000000; /* text-black */
+  --error-text-color: #dc2626; /* text-red-500 */
+}
+
+html, body {
+  margin: 0;
+  padding: 0;
 }
 
 body {
   padding: 0;
-  background-color: var(--background);
+  background: var(--background);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
   scroll-behavior: smooth;
   color: var(--font-color);
   text-align: center;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Mitr", sans-serif;
+}
+
+.link {
+  color: var(--secondary);
 }
 
 strong { 
   font-weight: bold; 
   color: var(--light-accent);
 }
+.font-text{
+  color: var(--font-color);
+}
 
+/* btn */
+.btn-primary {
+  background-color: var(--primary-bg-color);
+  color: var(--button-text-color);
+  padding: .75rem 1rem;
+  border-radius: 0.375rem;
+  transition: background-color 0.3s;
+}
+
+.btn-primary:hover {
+  background-color: var(--primary-hover-bg-color);
+}
+
+.btn-secondary {
+  background-color: var(--secondary-bg-color);
+  color: var(--button-text-color);
+  padding: 0.75rem 1rem;
+  border-radius: 0.375rem;
+  transition: background-color 0.3s;
+}
+
+.btn-secondary:hover {
+  background-color: var(--secondary-hover-bg-color);
+}
+
+.btn-alert {
+  background-color: var(--alert-bg-color);
+  color: var(--button-text-color);
+  padding: .75rem 1rem;
+  border-radius: 0.375rem;
+  transition: background-color 0.3s;
+}
+
+.btn-alert:hover {
+  background-color: var(--alert-hover-bg-color);
+}
+
+.btn-error {
+  background-color: var(--error-bg-color);
+  color: var(--button-text-color);
+  padding: .75rem 1rem;
+  border-radius: 0.375rem;
+  transition: background-color 0.3s;
+}
+
+.btn-error:hover {
+  background-color: var(--error-hover-bg-color);
+}
+
+.btn-gray {
+  background-color: var(--gray-bg-color);
+  color: var(--button-text-color);
+  padding: .75rem 1rem;
+  border-radius: 0.375rem;
+  transition: background-color 0.3s;
+}
+
+.btn-gray:hover {
+  background-color: var(--gray-hover-bg-color);
+}
+
+.input {
+  background-color: var(--input-bg-color);
+  border: 2px solid var(--input-border-color);
+  color: var(--input-text-color);
+  padding: 0.5rem;
+  border-radius: 0.375rem;
+  width: 90%;
+  box-sizing: border-box;
+}
+
+.input::placeholder {
+  color: #6b7280; /* placeholder color */
+}
+
+.error-text {
+  color: var(--error-text-color);
+}
+.gray-text {
+  color:#6b7280;
+}
+.gray-text:hover {
+  color: var(--alert-bg-color);
+}
+.success-text{
+  color: var(--secondary-bg-color);
+}
+
+.modal-container {
+  width: 90%;
+  max-width: 600px;
+  padding: 2rem;
+  border-radius: 0.5rem;
+  background-color: white;
+}
+
+.modal-overlay {
+  position: fixed;
+  inset: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: rgba(0, 0, 0, 0.5);
+  z-index: 50;
+}
+
+
+/* media */
+@media (min-width: 1025px) {
+  .input {
+    max-width: 400px;
+  }
+  .modal-container {
+    width: 30%;
+  }
+}
+
+/* ตกแต่ง */
+/* From Uiverse.io by vinodjangid07 */ 
+.file-upload-form {
+  width: fit-content;
+  height: fit-content;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.file-upload-label input {
+  display: none;
+}
+.file-upload-label svg {
+  height: 50px;
+  fill: var(--gray-bg-color);
+  margin-bottom: 20px;
+}
+.file-upload-label {
+  cursor: pointer;
+  background-color: var(--button-text-color);
+  padding: 30px 70px;
+  border-radius: 40px;
+  border: 2px dashed var(--gray-bg-color);
+  box-shadow: 0px 0px 200px -50px rgba(0, 0, 0, 0.719);
+}
+.file-upload-design {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 5px;
+}
+.browse-button {
+  background-color: var(--gray-bg-color);
+  padding: 5px 15px;
+  border-radius: 10px;
+  color: white;
+  transition: all 0.3s;
+}
+.browse-button:hover {
+  background-color: var(--gray-hover-bg-color);
+}
+
+
+.btn-logout {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  width: 45px;
+  height: 45px;
+  border: none;
+  border-radius: 50%;
+  cursor: pointer;
+  position: relative;
+  overflow: hidden;
+  transition-duration: .3s;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.199);
+  background-color: var(--error-bg-color);
+}
+
+/* plus sign-logout */
+.sign-logout {
+  width: 100%;
+  transition-duration: .3s;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.sign-logout svg {
+  width: 17px;
+}
+
+.sign-logout svg path {
+  fill: white;
+}
+/* text-logout */
+.text-logout {
+  position: absolute;
+  right: 0%;
+  width: 0%;
+  opacity: 0;
+  color: white;
+  font-size: 1.2em;
+  font-weight: 400;
+  transition-duration: .3s;
+}
+/* hover effect on button width */
+.btn-logout:hover {
+  width: 125px;
+  border-radius: 40px;
+  transition-duration: .3s;
+  background-color: var(--error-hover-bg-color);
+}
+
+.btn-logout:hover .sign-logout {
+  width: 30%;
+  transition-duration: .3s;
+  padding-left: 20px;
+}
+/* hover effect button's text-logout */
+.btn-logout:hover .text-logout {
+  opacity: 1;
+  width: 70%;
+  transition-duration: .3s;
+  padding-right: 10px;
+}
+/* button click effect*/
+.btn-logout:active {
+  transform: translate(2px ,2px);
+}
+/* 
 a {
   text-decoration: none;
   color: var(--primary);
@@ -75,4 +334,4 @@ input[type=text]:focus,input[type=password]:focus {
 .red {
   font-weight: bold;
   color: var(--red);
-}
+} */
